@@ -1,3 +1,8 @@
+Wed Feb 24 20:11:50 1999  Tor Lillqvist  <tml@iki.fi>
+
+	* metal_theme_draw.c: Declare fuzzy_match before use. Make it
+ 	static.
+
 Thu Feb 11 22:36:38 1999  Owen Taylor  <otaylor@redhat.com>
 
 	* metal_theme_draw.c (draw_box): Draw some box
